--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <!-- Seção do Header com foto e nome -->
 		<header class="header">
             <div class="profile-photo">
-                <img src="https://via.placeholder.com/150/4A90E2/FFFFFF?text=FOTO" alt="Minha Foto" id="foto-perfil">
+			<img src="FOTO.png" alt="Minha Foto" id="foto-perfil">
+                <!--<img src="https://via.placeholder.com/150/4A90E2/FFFFFF?text=FOTO" alt="Minha Foto" id="foto-perfil">-->
             </div>
             <h1 class="nome-principal">SEU NOME AQUI</h1>
             <p class="apelido">@seu_apelido</p>
