--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Fundo animado com formas geométricas -->
     <div class="background-shapes">
@@ -18,15 +20,14 @@
 
     <!-- Container principal -->
     <div class="container">
-        
+
         <!-- Seção do Header com foto e nome -->
-		<header class="header">
+        <header class="header">
             <div class="profile-photo">
-			<img src="foto.jpg" alt="Minha Foto" id="foto-perfil">
-                <!--<img src="https://via.placeholder.com/150/4A90E2/FFFFFF?text=FOTO" alt="Minha Foto" id="foto-perfil">-->
+                <img src="foto.jpg" alt="Minha Foto" id="foto-perfil">
             </div>
-            <h1 class="nome-principal">SEU NOME AQUI</h1>
-            <p class="apelido">@seu_apelido</p>
+            <h1 class="nome-principal">Edson Zanatta</h1>
+            <p class="apelido">@Professor</p>
         </header>
 
         <!-- Seção Sobre Mim -->
@@ -55,6 +56,9 @@
                 <div class="hobby-item">
                     <i class="fas fa-gamepad"></i>
                     <span>Games</span>
+                    <span class="tooltip-text">
+                        Jogos de PC, console e mobile. <br> Roms antigas de plataforma
+                    </span>
                 </div>
                 <div class="hobby-item">
                     <i class="fas fa-music"></i>
@@ -63,6 +67,10 @@
                 <div class="hobby-item">
                     <i class="fas fa-code"></i>
                     <span>Programação</span>
+					<span class="tooltip-text">
+					    Programação desktop e web com html,css e javascript <br>
+						backend com python e banco de dados sql server
+					</span>
                 </div>
                 <div class="hobby-item">
                     <i class="fas fa-camera"></i>
@@ -73,8 +81,12 @@
                     <span>Leitura</span>
                 </div>
                 <div class="hobby-item">
-                    <i class="fas fa-futbol"></i>
-                    <span>Esportes</span>
+                    <i class="fas fa-chess"></i>
+                    <span>Xadrez</span>
+                </div>
+                <div class="hobby-item">
+                    <i class="fas fa-cut"></i>
+                    <span>Bordado</span>
                 </div>
             </div>
         </section>
@@ -83,21 +95,19 @@
         <section class="redes-sociais">
             <h2><i class="fas fa-share-alt"></i> Me Encontre</h2>
             <div class="social-buttons">
+                <a href="#" class="social-btn discord">
+                    <i class="fab fa-facebook"></i>
+                    <span>facebook</span>
+                </a>
+
                 <a href="#" class="social-btn instagram">
                     <i class="fab fa-instagram"></i>
                     <span>Instagram</span>
                 </a>
-                <a href="#" class="social-btn discord">
-                    <i class="fab fa-discord"></i>
-                    <span>Discord</span>
-                </a>
-                <a href="#" class="social-btn github">
+
+                <a href="https://github.com/edsonzanatta" class="social-btn github">
                     <i class="fab fa-github"></i>
                     <span>GitHub</span>
-                </a>
-                <a href="#" class="social-btn youtube">
-                    <i class="fab fa-youtube"></i>
-                    <span>YouTube</span>
                 </a>
             </div>
         </section>
@@ -106,59 +116,20 @@
         <footer class="footer">
             <div class="quote-box">
                 <i class="fas fa-quote-left"></i>
-                <p class="quote">"O futuro pertence àqueles que acreditam na beleza de seus sonhos!"</p>
+                <p class="quote">"❤️ Segundão, Vamos juntos nessa jornada!.
+                    Se você acredita, você consegue. 😎️"</p>
                 <i class="fas fa-quote-right"></i>
             </div>
         </footer>
-
     </div>
 
     <!-- Botão flutuante para mudar tema -->
     <button class="theme-toggle" onclick="toggleTheme()">
         <i class="fas fa-palette"></i>
     </button>
+    <!-- Link para o arquivo JavaScript (sempre no final do body) -->
+    <script src="script.js"></script>
 
-    <script>
-        // Função para alternar entre temas
-        function toggleTheme() {
-            document.body.classList.toggle('theme-dark');
-            document.body.classList.toggle('theme-neon');
-        }
-
-        // Animação de entrada dos elementos
-        window.addEventListener('load', function() {
-            const elements = document.querySelectorAll('.info-card, .hobby-item, .social-btn');
-            elements.forEach((element, index) => {
-                setTimeout(() => {
-                    element.style.opacity = '1';
-                    element.style.transform = 'translateY(0)';
-                }, index * 100);
-            });
-        });
-
-        // Efeito de digitação no nome
-        function typeWriter(element, text, speed = 100) {
-            let i = 0;
-            element.innerHTML = '';
-            function type() {
-                if (i < text.length) {
-                    element.innerHTML += text.charAt(i);
-                    i++;
-                    setTimeout(type, speed);
-                }
-            }
-            type();
-        }
-
-        // Aplicar efeito de digitação quando a página carregar
-        window.addEventListener('load', function() {
-            const nomeElement = document.querySelector('.nome-principal');
-            const textoOriginal = nomeElement.textContent;
-            setTimeout(() => {
-                typeWriter(nomeElement, textoOriginal, 150);
-            }, 500);
-        });
-    </script>
 </body>
-</html>
 
+</html>
